welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:4: error: value update is not a member of Boolean
} while (estSurBlanc() = false)
         ^